# reweighted_TEBD

./: .gitignore  LICENSE  README.md  gen-MPS_fermi.py  gen-MPS_spin_model.py  gen-rTEBD_bosonic.py  params_fermion.yaml  pyproject.toml  rTEBD_free_fermion.py
examples/: file_import_and_check.ipynb  quickstart.md
examples/20260201_184137_fermion_test_L6_chi1000_g1.5_T20.0_N250/: params.json  summary.txt
rtebd/: __init__.py  cli.py  config.py  io.py  run.py  utils.py
rtebd/fermion/: __init__.py  model.py  mpdo.py
runs/20260201_184137_fermion_test_L6_chi1000_g1.5_T20.0_N250/: results.npz
runs/20260201_184955_fermion_test_L128_chi16_g1.5_T50.0_N625/: params.json  results.npz  summary.txt
scripts/: rtebd_ghz_fermion.py  run_rtebd_fermion.py  run_rtebd_spin.py
